--- a/src/index.css
+++ b/src/index.css
@@ -131,3 +131,29 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* For the entire scrollbar track */
+::-webkit-scrollbar {
+  width: 7px; /* width of the entire scrollbar */
+  background-color: #262626; /* color of the scrollbar track */
+}
+
+/* For the scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+
+/* On hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* color of the scrollbar thumb on hover */
+}
+
+/* For the scrollbar corner (where vertical and horizontal scrollbars meet) */
+::-webkit-scrollbar-corner {
+  background-color: #f5f5f5; /* color of the scrollbar corner */
+}
+
+/* For the scrollbar track piece when there's an active scrollbar */
+::-webkit-scrollbar-track-piece {
+  background-color: #262626;
+}
